--- a/client/public/css/bootstrap.css
+++ b/client/public/css/bootstrap.css
@@ -1603,6 +1603,16 @@ pre code {
     width: 1170px;
   }
 }
+@media (min-width: 1400px) {
+  .container {
+    width: 1400px;
+  }
+}
+@media (min-width: 1600px) {
+  .container {
+    width: 1600px;
+  }
+}
 .container-fluid {
   padding-right: 15px;
   padding-left: 15px;
